Enable Vector Stores in GLORIOUS_FUTURE ()
* Introduce non-inline stores:
The big property value store and the vector stores are very similar and
have similar patterns for access. Having such concepts localising the
switching needed.
* Simplify vector store reads
* Enable vector stores

---------

Co-authored-by: Satia Herfert <satiaherfert@gmx.de>